--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/csmurillo/TicTacToe#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "express-ejs-layouts": "^2.5.1",
+    "nodemon": "^2.0.15",
+    "socket.io": "^4.4.0",
+    "uuid": "^8.3.2"
   }
 }
